--- a/source/sass/blocks/catalog-prize.scss
+++ b/source/sass/blocks/catalog-prize.scss
@@ -53,6 +53,7 @@
 .catalog-prize__title {
   @include title;
   display: block;
+  width: 161px;
   margin: 0 auto;
   padding: 189px 61px 43px 58px;
   font-size: 16px;
